--- a/05 - Flex Panel Gallery/style.css
+++ b/05 - Flex Panel Gallery/style.css
@@ -34,6 +34,10 @@ body {
   background-size:cover;
   background-position:center;
   flex: 1;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -47,6 +51,24 @@ body {
   margin:0;
   width: 100%;
   transition:transform 0.5s;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.panel > *:first-child {
+  transform: translateY(-100%);
+}
+
+.panel.open-active> *:first-child {
+  transform: translateY(100%);
+}
+.panel > *:last-child {
+  transform: translateY(100%);
+}
+.panel.open-active> *:last-child {
+  transform: translateY(-100%);
 }
 
 .panel p {
@@ -61,4 +83,5 @@ body {
 
 .panel.open {
   font-size:40px;
+  flex: 5;
 }
