fixing transform translate y axis bug from -100 to 0

--- a/05 - Flex Panel Gallery/style.css
+++ b/05 - Flex Panel Gallery/style.css
@@ -61,14 +61,14 @@ body {
   transform: translateY(-100%);
 }
 
-.panel.open-active> *:first-child {
-  transform: translateY(100%);
+.panel.open-active > *:first-child {
+  transform: translateY(0);
 }
 .panel > *:last-child {
   transform: translateY(100%);
 }
-.panel.open-active> *:last-child {
-  transform: translateY(-100%);
+.panel.open-active > *:last-child {
+  transform: translateY(0);
 }
 
 .panel p {
